# onboarding

./: Dockerfile  docker-compose.yml  pyproject.toml  server.py
assets/: pikachu.txt  telepay.logo.txt
