[tool.poetry]
name = "onboarding"
version = "0.1.0"
description = "A simple program to onboard you into TelePay"
authors = ["Carlos Lugones <ceo@telepay.cash>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lolcat = "^1.4"
requests = "^2.28.1"
pygments = "^2.13.0"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
